# scrapping-script

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: scheduled_scrape.yml
src/scraper/: __init__.py  mcp_server.py  scheduler.py
src/scraper/core/: address.py  categorize.py  config.py  dedupe.py  http.py  media.py  models.py  orchestrator.py  storage.py  timeutil.py
src/scraper/sources/: auth_meta.py  base.py  events_ticketmaster.py  events_web.py  registry.py  social_instagram.py  social_threads.py  trends_google.py  trends_hackernews.py  trends_reddit.py  trends_youtube.py  web_extract.py  web_search.py
supabase/migrations/: 0001_init.sql  0002_venues.sql
web/: SETUP.md  package-lock.json  package.json
web/src/: proxy.ts
web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
web/src/app/auth/callback/: route.ts
web/src/app/events/[id]/: page.tsx
web/src/app/map/: page.tsx
web/src/app/submit/: page.tsx
web/src/components/: auth-button.tsx  event-card.tsx  event-image.tsx  event-map.tsx  filters.tsx  header.tsx  image-placeholder.tsx  lang-context.tsx  map-shell.tsx  submit-form.tsx
web/src/lib/: events.ts  hash.ts  i18n.ts  types.ts
web/src/lib/supabase/: server.ts
